@@ -1,3 +1,11 @@
+2001-05-04  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/lookup.h (IsConstant): 
+	* src/lookup.cpp (IsConstant, CheckStringConstant): 
+	Fix the regression from 1.12, bug 417 -
+	constant string expressions should now
+	be correct.
+
 2001-05-04  ??  <vajoczki@yahoo.com>
 
 	* src/bytecode.cpp(): Workaround for Sun JVM
